load("@build_bazel_rules_apple//apple:resources.bzl", "apple_resource_bundle")
load("@build_bazel_rules_swift//swift:swift.bzl", "swift_compiler_plugin", "swift_library", "swift_library_group")
load("@rules_license//rules:license.bzl", "license")
load("@rules_license//rules:package_info.bzl", "package_info")
load("@rules_swift_package_manager//swiftpkg:build_defs.bzl", "generate_modulemap", "resource_bundle_accessor", "resource_bundle_infoplist")

package(
    default_package_metadata = [
        ":license.rspm",
        ":package_info.rspm",
    ],
)

exports_files(["pkg_info.json"])

apple_resource_bundle(
    name = "ComposableArchitecture.rspm_resource_bundle",
    bundle_name = "swift-composable-architecture_ComposableArchitecture",
    infoplists = [":ComposableArchitecture.rspm_resource_bundle_infoplist"],
    resources = ["Sources/ComposableArchitecture/Resources/PrivacyInfo.xcprivacy"],
    visibility = ["//:__subpackages__"],
)

generate_modulemap(
    name = "ComposableArchitecture.rspm_modulemap",
    deps = [],
    hdrs = [":ComposableArchitecture.rspm"],
    module_name = "ComposableArchitecture",
    visibility = ["//:__subpackages__"],
)

license(
    name = "license.rspm",
    license_text = "LICENSE",
)

package_info(
    name = "package_info.rspm",
    package_name = "swift-composable-architecture",
    package_url = "https://github.com/pointfreeco/swift-composable-architecture.git",
    package_version = "1.15.2",
)

resource_bundle_accessor(
    name = "ComposableArchitecture.rspm_resource_bundle_accessor",
    bundle_name = "swift-composable-architecture_ComposableArchitecture",
)

resource_bundle_infoplist(
    name = "ComposableArchitecture.rspm_resource_bundle_infoplist",
    region = "en",
)

swift_compiler_plugin(
    name = "ComposableArchitectureMacros.rspm",
    copts = ["-DSWIFT_PACKAGE"],
    deps = [
        "@swiftpkg_swift_syntax//:SwiftSyntaxMacros",
        "@swiftpkg_swift_syntax//:SwiftCompilerPlugin",
    ],
    minimum_os_version = select({
        "@rules_swift_package_manager//config_settings/spm/platform:ios": "13.0",
        "@rules_swift_package_manager//config_settings/spm/platform:macos": "10.15",
        "@rules_swift_package_manager//config_settings/spm/platform:tvos": "13.0",
        "@rules_swift_package_manager//config_settings/spm/platform:watchos": "6.0",
        "//conditions:default": "oldest",
    }),
    module_name = "ComposableArchitectureMacros",
    package_name = "swift-composable-architecture",
    srcs = [
        "Sources/ComposableArchitectureMacros/Availability.swift",
        "Sources/ComposableArchitectureMacros/Extensions.swift",
        "Sources/ComposableArchitectureMacros/ObservableStateMacro.swift",
        "Sources/ComposableArchitectureMacros/Plugins.swift",
        "Sources/ComposableArchitectureMacros/PresentsMacro.swift",
        "Sources/ComposableArchitectureMacros/ReducerMacro.swift",
        "Sources/ComposableArchitectureMacros/ViewActionMacro.swift",
    ],
    visibility = ["//visibility:public"],
)

swift_library(
    name = "ComposableArchitecture.rspm",
    always_include_developer_search_paths = True,
    copts = ["-DSWIFT_PACKAGE"],
    data = [":ComposableArchitecture.rspm_resource_bundle"],
    deps = [
        "@swiftpkg_swift_case_paths//:CasePaths",
        "@swiftpkg_combine_schedulers//:CombineSchedulers",
        "@swiftpkg_swift_concurrency_extras//:ConcurrencyExtras",
        "@swiftpkg_swift_custom_dump//:CustomDump",
        "@swiftpkg_swift_dependencies//:Dependencies",
        "@swiftpkg_swift_dependencies//:DependenciesMacros",
        "@swiftpkg_swift_identified_collections//:IdentifiedCollections",
        "@swiftpkg_xctest_dynamic_overlay//:IssueReporting",
        "@swiftpkg_swift_collections//:OrderedCollections",
        "@swiftpkg_swift_perception//:Perception",
        "@swiftpkg_swift_navigation//:SwiftUINavigation",
        "@swiftpkg_swift_navigation//:UIKitNavigation",
    ],
    generates_header = True,
    minimum_os_version = select({
        "@rules_swift_package_manager//config_settings/spm/platform:ios": "13.0",
        "@rules_swift_package_manager//config_settings/spm/platform:macos": "10.15",
        "@rules_swift_package_manager//config_settings/spm/platform:tvos": "13.0",
        "@rules_swift_package_manager//config_settings/spm/platform:watchos": "6.0",
        "//conditions:default": "oldest",
    }),
    module_name = "ComposableArchitecture",
    package_name = "swift-composable-architecture",
    plugins = ["//:ComposableArchitectureMacros.rspm"],
    srcs = [
        "Sources/ComposableArchitecture/CaseReducer.swift",
        "Sources/ComposableArchitecture/Dependencies/Dismiss.swift",
        "Sources/ComposableArchitecture/Dependencies/IsPresented.swift",
        "Sources/ComposableArchitecture/Effect.swift",
        "Sources/ComposableArchitecture/Effects/Animation.swift",
        "Sources/ComposableArchitecture/Effects/Cancellation.swift",
        "Sources/ComposableArchitecture/Effects/Debounce.swift",
        "Sources/ComposableArchitecture/Effects/Publisher.swift",
        "Sources/ComposableArchitecture/Effects/TaskResult.swift",
        "Sources/ComposableArchitecture/Effects/Throttle.swift",
        "Sources/ComposableArchitecture/Internal/AreOrderedSetsDuplicates.swift",
        "Sources/ComposableArchitecture/Internal/AssumeIsolated.swift",
        "Sources/ComposableArchitecture/Internal/Box.swift",
        "Sources/ComposableArchitecture/Internal/Create.swift",
        "Sources/ComposableArchitecture/Internal/CurrentValueRelay.swift",
        "Sources/ComposableArchitecture/Internal/Debug.swift",
        "Sources/ComposableArchitecture/Internal/DefaultSubscript.swift",
        "Sources/ComposableArchitecture/Internal/Deprecations.swift",
        "Sources/ComposableArchitecture/Internal/DispatchQueue.swift",
        "Sources/ComposableArchitecture/Internal/EffectActions.swift",
        "Sources/ComposableArchitecture/Internal/EphemeralState.swift",
        "Sources/ComposableArchitecture/Internal/Exports.swift",
        "Sources/ComposableArchitecture/Internal/HashableStaticString.swift",
        "Sources/ComposableArchitecture/Internal/KeyPath+Sendable.swift",
        "Sources/ComposableArchitecture/Internal/Locking.swift",
        "Sources/ComposableArchitecture/Internal/Logger.swift",
        "Sources/ComposableArchitecture/Internal/NavigationID.swift",
        "Sources/ComposableArchitecture/Internal/NotificationName.swift",
        "Sources/ComposableArchitecture/Internal/OpenExistential.swift",
        "Sources/ComposableArchitecture/Internal/PresentationID.swift",
        "Sources/ComposableArchitecture/Internal/ReturningLastNonNilValue.swift",
        "Sources/ComposableArchitecture/Internal/RuntimeWarnings.swift",
        "Sources/ComposableArchitecture/Internal/StackIDGenerator.swift",
        "Sources/ComposableArchitecture/Macros.swift",
        "Sources/ComposableArchitecture/Observation/Alert+Observation.swift",
        "Sources/ComposableArchitecture/Observation/Binding+Observation.swift",
        "Sources/ComposableArchitecture/Observation/IdentifiedArray+Observation.swift",
        "Sources/ComposableArchitecture/Observation/NavigationStack+Observation.swift",
        "Sources/ComposableArchitecture/Observation/ObservableState.swift",
        "Sources/ComposableArchitecture/Observation/ObservationStateRegistrar.swift",
        "Sources/ComposableArchitecture/Observation/Store+Observation.swift",
        "Sources/ComposableArchitecture/Observation/ViewAction.swift",
        "Sources/ComposableArchitecture/Reducer.swift",
        "Sources/ComposableArchitecture/Reducer/ReducerBuilder.swift",
        "Sources/ComposableArchitecture/Reducer/Reducers/BindingReducer.swift",
        "Sources/ComposableArchitecture/Reducer/Reducers/CombineReducers.swift",
        "Sources/ComposableArchitecture/Reducer/Reducers/DebugReducer.swift",
        "Sources/ComposableArchitecture/Reducer/Reducers/DependencyKeyWritingReducer.swift",
        "Sources/ComposableArchitecture/Reducer/Reducers/EmptyReducer.swift",
        "Sources/ComposableArchitecture/Reducer/Reducers/ForEachReducer.swift",
        "Sources/ComposableArchitecture/Reducer/Reducers/IfCaseLetReducer.swift",
        "Sources/ComposableArchitecture/Reducer/Reducers/IfLetReducer.swift",
        "Sources/ComposableArchitecture/Reducer/Reducers/OnChange.swift",
        "Sources/ComposableArchitecture/Reducer/Reducers/Optional.swift",
        "Sources/ComposableArchitecture/Reducer/Reducers/PresentationReducer.swift",
        "Sources/ComposableArchitecture/Reducer/Reducers/Reduce.swift",
        "Sources/ComposableArchitecture/Reducer/Reducers/Scope.swift",
        "Sources/ComposableArchitecture/Reducer/Reducers/SignpostReducer.swift",
        "Sources/ComposableArchitecture/Reducer/Reducers/StackReducer.swift",
        "Sources/ComposableArchitecture/RootStore.swift",
        "Sources/ComposableArchitecture/SharedState/PersistenceKey.swift",
        "Sources/ComposableArchitecture/SharedState/PersistenceKey/AppStorageKey.swift",
        "Sources/ComposableArchitecture/SharedState/PersistenceKey/AppStorageKeyPathKey.swift",
        "Sources/ComposableArchitecture/SharedState/PersistenceKey/FileStorageKey.swift",
        "Sources/ComposableArchitecture/SharedState/PersistenceKey/InMemoryKey.swift",
        "Sources/ComposableArchitecture/SharedState/PersistenceKey/PersistenceKeyDefault.swift",
        "Sources/ComposableArchitecture/SharedState/Reference.swift",
        "Sources/ComposableArchitecture/SharedState/References/ValueReference.swift",
        "Sources/ComposableArchitecture/SharedState/Shared.swift",
        "Sources/ComposableArchitecture/SharedState/SharedChangeTracking.swift",
        "Sources/ComposableArchitecture/SharedState/SharedReader.swift",
        "Sources/ComposableArchitecture/Store.swift",
        "Sources/ComposableArchitecture/SwiftUI/Alert.swift",
        "Sources/ComposableArchitecture/SwiftUI/Binding.swift",
        "Sources/ComposableArchitecture/SwiftUI/ConfirmationDialog.swift",
        "Sources/ComposableArchitecture/SwiftUI/Deprecated/ActionSheet.swift",
        "Sources/ComposableArchitecture/SwiftUI/Deprecated/LegacyAlert.swift",
        "Sources/ComposableArchitecture/SwiftUI/Deprecated/NavigationLinkStore.swift",
        "Sources/ComposableArchitecture/SwiftUI/ForEachStore.swift",
        "Sources/ComposableArchitecture/SwiftUI/FullScreenCover.swift",
        "Sources/ComposableArchitecture/SwiftUI/IfLetStore.swift",
        "Sources/ComposableArchitecture/SwiftUI/NavigationDestination.swift",
        "Sources/ComposableArchitecture/SwiftUI/NavigationStackStore.swift",
        "Sources/ComposableArchitecture/SwiftUI/Popover.swift",
        "Sources/ComposableArchitecture/SwiftUI/PresentationModifier.swift",
        "Sources/ComposableArchitecture/SwiftUI/Sheet.swift",
        "Sources/ComposableArchitecture/SwiftUI/SwitchStore.swift",
        "Sources/ComposableArchitecture/SwiftUI/WithViewStore.swift",
        "Sources/ComposableArchitecture/TestStore.swift",
        "Sources/ComposableArchitecture/UIKit/AlertStateUIKit.swift",
        "Sources/ComposableArchitecture/UIKit/IfLetUIKit.swift",
        "Sources/ComposableArchitecture/UIKit/NavigationStackControllerUIKit.swift",
        "Sources/ComposableArchitecture/ViewStore.swift",
        ":ComposableArchitecture.rspm_resource_bundle_accessor",
    ],
    tags = ["manual"],
    visibility = ["//:__subpackages__"],
)

swift_library_group(
    name = "ComposableArchitecture",
    deps = [
        "@swiftpkg_swift_composable_architecture//:ComposableArchitecture.rspm",
        "@swiftpkg_swift_composable_architecture//:ComposableArchitecture.rspm_modulemap",
    ],
    visibility = ["//visibility:public"],
)
