load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library", "swift_library_group")
load("@rules_license//rules:license.bzl", "license")
load("@rules_license//rules:package_info.bzl", "package_info")

package(
    default_package_metadata = [
        ":license.rspm",
        ":package_info.rspm",
    ],
)

exports_files(["pkg_info.json"])

license(
    name = "license.rspm",
    license_text = "LICENSE",
)

package_info(
    name = "package_info.rspm",
    package_name = "swift-concurrency-extras",
    package_url = "https://github.com/pointfreeco/swift-concurrency-extras",
    package_version = "1.2.0",
)

swift_library(
    name = "ConcurrencyExtras.rspm",
    always_include_developer_search_paths = True,
    copts = ["-DSWIFT_PACKAGE"],
    minimum_os_version = select({
        "@rules_swift_package_manager//config_settings/spm/platform:ios": "13.0",
        "@rules_swift_package_manager//config_settings/spm/platform:macos": "10.15",
        "@rules_swift_package_manager//config_settings/spm/platform:tvos": "13.0",
        "@rules_swift_package_manager//config_settings/spm/platform:watchos": "6.0",
        "//conditions:default": "oldest",
    }),
    module_name = "ConcurrencyExtras",
    package_name = "swift-concurrency-extras",
    srcs = [
        "Sources/ConcurrencyExtras/ActorIsolated.swift",
        "Sources/ConcurrencyExtras/AnyHashableSendable.swift",
        "Sources/ConcurrencyExtras/AsyncStream.swift",
        "Sources/ConcurrencyExtras/AsyncThrowingStream.swift",
        "Sources/ConcurrencyExtras/Internal/Locking.swift",
        "Sources/ConcurrencyExtras/Internal/UncheckedBox.swift",
        "Sources/ConcurrencyExtras/LockIsolated.swift",
        "Sources/ConcurrencyExtras/MainSerialExecutor.swift",
        "Sources/ConcurrencyExtras/Result.swift",
        "Sources/ConcurrencyExtras/Task.swift",
        "Sources/ConcurrencyExtras/UncheckedSendable.swift",
    ],
    tags = ["manual"],
    visibility = ["//:__subpackages__"],
)

swift_library_group(
    name = "ConcurrencyExtras",
    deps = ["@swiftpkg_swift_concurrency_extras//:ConcurrencyExtras.rspm"],
    visibility = ["//visibility:public"],
)
